WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43705
[Qt] GraphicsContext::clipOut(IntRect) ignores the transformation matrix.
https://bugs.webkit.org/show_bug.cgi?id=43705
Summary
[Qt] GraphicsContext::clipOut(IntRect) ignores the transformation matrix.
Ariya Hidayat
Reported
2010-08-08 23:48:15 PDT
[Qt] GraphicsContext::clipOut(IntRect) ignores the transformation matrix.
Attachments
Patch
(1.50 KB, patch)
2010-08-09 00:02 PDT
,
Ariya Hidayat
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ariya Hidayat
Comment 1
2010-08-08 23:52:56 PDT
***
Bug 43706
has been marked as a duplicate of this bug. ***
Ariya Hidayat
Comment 2
2010-08-09 00:02:47 PDT
Created
attachment 63864
[details]
Patch
Ariya Hidayat
Comment 3
2010-08-09 02:36:41 PDT
Comment on
attachment 63864
[details]
Patch Clearing flags on attachment: 63864 Committed
r64971
: <
http://trac.webkit.org/changeset/64971
>
Ariya Hidayat
Comment 4
2010-08-09 02:36:49 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug