2010-08-09  Ariya Hidayat  <ariya@sencha.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] GraphicsContext::clipOut(IntRect) ignores the transformation matrix.
        https://bugs.webkit.org/show_bug.cgi?id=43705

        Just like clipOut(Path), which is taken care in r60796 already,
        clipOut(IntRect) must transform the window bounding box properly.

        * platform/graphics/qt/GraphicsContextQt.cpp:
        (WebCore::GraphicsContext::clipOut):

Canonical link: https://commits.webkit.org/55784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64971 268f45cc-cd09-0410-ab3c-d52691b4dbfc